unpackaged/main/default/objects/GBLite__GB_Global_Meta__c/GBLite__GB_Global_Meta__c.object-meta.xml
<CustomObject>
    <label>GB Global Meta</label>
    <nameField>
        <displayFormat>GBM-{0000}</displayFormat>
        <label>GB Global Meta Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GB Global Meta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>