unpackaged/main/default/objects/GBLite__GB_Global_Meta__c/fields/GBLite__Controlling_Field__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Controlling_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Controlling Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>