unpackaged/main/default/objects/GBLite__GB_Global_Meta__c/fields/GBLite__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Object_API_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>