unpackaged/main/default/objects/GBLite__GB_Global_Meta__c/fields/GBLite__Object_Dot_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Object_Dot_Field_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Object Dot Field Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>