unpackaged/main/default/objects/GBLite__GB_Global_Meta__c/fields/GBLite__Original_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Original_Record_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Original Record Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>