unpackaged/main/default/objects/GBLite__GB_Global_Meta__c/fields/GBLite__Picklist_Meta__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Picklist_Meta__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Picklist Meta</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>