unpackaged/main/default/objects/GBLite__GB_Global_Meta__c/fields/GBLite__Response_Message__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Response_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>