unpackaged/main/default/objects/GBLite__GB_Global_Meta__c/fields/GBLite__Scope__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Scope__c</fullName>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Grid</fullName>
                <default>true</default>
                <label>Grid</label>
            </value>
            <value>
                <fullName>Tabbed Page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>