unpackaged/main/default/objects/GBLite__GB_Global_Meta__c/fields/GBLite__Summary__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Summary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>