unpackaged/main/default/objects/GBLite__GB_Global_Meta__c/validationRules/GBLite__Prevent_Update_of_Original_Record_Id.validationRule-meta.xml
<ValidationRule>
    <fullName>GBLite__Prevent_Update_of_Original_Record_Id</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(PRIORVALUE(GBLite__Original_Record_Id__c))), ISCHANGED(GBLite__Original_Record_Id__c),
OR(
ISPICKVAL(GBLite__Type__c, "Action"),
ISPICKVAL(GBLite__Type__c, "Custom Code - Global CSS"),
ISPICKVAL(GBLite__Type__c, "Custom Code - Global JavaScript"),
ISPICKVAL(GBLite__Type__c, "Custom Code - CSS"),
ISPICKVAL(GBLite__Type__c, "Custom Code - JavaScript"),
ISPICKVAL(GBLite__Type__c, "Theme - Global"),
ISPICKVAL(GBLite__Type__c, "Theme - Grid")
)
)</errorConditionFormula>
    <errorDisplayField>GBLite__Original_Record_Id__c</errorDisplayField>
    <errorMessage>You cannot edit the Original Record Id field.</errorMessage>
</ValidationRule>